[package]
name = "dwmbar"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Status bar for dwm"
repository = "https://github.com/Lulonaut/dwmbar"

[dependencies]
x11 = { version = "2.21.0", features = ["xlib"] }
serde_json = "1.0.97"
serde = { version = "1.0.164", features = ["derive"] }
anyhow = "1.0.71"
serde_with = "3.0.0"


[profile.release]
strip = true
lto = true